--- a/stack/settings.html
+++ b/stack/settings.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
     <script src='../node_modules/markdown-it/dist/markdown-it.js'></script>
     <script src="../node_modules/to-mark/dist/to-mark.js"></script>
     <script src="../node_modules/tui-code-snippet/dist/tui-code-snippet.js"></script>
@@ -11,7 +12,7 @@
     <script src="../node_modules/tui-chart/dist/tui-chart.js"></script>
     <script src="../node_modules/tui-editor/dist/tui-editor-extTable.js"></script>
     <script src="../node_modules/tui-editor/dist/tui-editor-extChart.js"></script>
-    <script src="../node_modules/plantuml-encoder/lib/plantuml-encoder.js"></script>
+    <script src="../node_modules/plantuml-encoder/dist/plantuml-encoder.js"></script>
     <script src="../node_modules/tui-editor/dist/tui-editor-extUML.js"></script>
     <link rel="stylesheet" href="../node_modules/tui-editor/dist/tui-editor.css">
     <link rel="stylesheet" href="../node_modules/tui-chart/dist/tui-chart.css">
